...
    <string name="profile_activity_name">Profile</string>
    <string name="edit_profile_activity_name">Edit Profile</string>
    <string name="user_reputation">Reputation:</string>
    <string name="user_preferences">Preferences:</string>
    <string name="username">Username</string>
    <string name="change_pic">Change profile picture</string>
    <string name="save">Save</string>
    <string name="offer_name">Offer name:</string>
    <string name="offer_description">Description:</string>
    <string name="offer_picture">Picture:</string>
    <string name="create_new_offer">Create new offer</string>
    <string name="button_create_offer">Create offer</string>
    <string name="show_offer_title">Show offer</string>
    <string name="error_create_offer">The name and the description cannot be empty.</string>
    <string name="name">Name:</string>
    <string name="username_presentation">Username:</string>
    <string name="mail">Mail:</string>
    <string name="create_account">Create Account</string>
...
    <string name="hint_greeting">You can now send messages to each other</string>
    <string name="search">Search title</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="old_offer_found">Old offer found</string>
    <string name="restore_offer_message">You already started creating an offer. Do you want to continue to edit it?</string>
    <string name="choose_offer_template">Choose offer template</string>
    <string name="save_as_pattern">Save as pattern</string>
    <string name="cancel">Cancel</string>
    <string name="choose_name_pattern">Choose a name for the new offer pattern</string>
    <string name="choose_a_template">Choose a template</string>
    <string name="accept">Accept</string>
    <string name="create_pattern_error_empty">You should at least provide a title, a description or a category to save this offer as a pattern.</string>
    <string name="error_no_pattern_saved">There is no pattern saved.</string>
    <string name="can_not_load_pattern">Could not load the pattern.</string>
    <string name="can_not_load_pattern_list">Can not load the list of pattern</string>
</resources>

