...
                android:text="@string/button_create_offer"
                android:theme="@style/ButtonTheme"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_save_pattern"
                app:layout_constraintTop_toBottomOf="@+id/localization_linear_layout" />

            <Button
                android:id="@+id/button_save_pattern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
